# evm-rust-lab

./: .env.example  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
docs/: 01-rpc-basics.md  02-abi-calldata.md  03-storage-slots.md  04-revm-simulation.md
examples/: abi_decode_erc20_transfer.rs  erc20_balance_of.rs  revm_simple_transfer.rs  rpc_chain_health.rs  rpc_fetch_block.rs  storage_read_slot.rs
src/: abi.rs  check.rs  color.rs  input.rs  lib.rs  main.rs  raw.rs  report.rs  rpc.rs  storage.rs  watch.rs
