[package]
name = "evm-rust-lab"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/satyakwok/evm-rust-lab"
homepage = "https://satyakwok.dev/projects"
description = "Practical Rust EVM examples using Alloy, revm, and real RPC workflows."

[dependencies]
alloy = { version = "2.0.5", features = ["full"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
revm = "40.0.3"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
